[package]
name = "tftp_server"
version = "0.4.5"
authors = ["Darin Minamoto <darinm223@gmail.com>", "Alexandru Macovei <alexnmaco@gmail.com>"]
description = "A TFTP server implementation in Rust using mio"
repository = "https://github.com/alexmaco/tftp-server"
readme = "README.md"
keywords = ["network", "tftp", "protocol", "mio"]
license = "MIT/GPLv3"

[dependencies]
mio = "0.6.13"
byteorder = "1.2.1"
log = "0.4.1"
env_logger = "0.5.3"
clap = "2.30.0"
mio-more = "0.1.0"
sna = "0.1.0"

[dev-dependencies]
env_logger = "0.5.3"
assert_matches = "1.1.0"

[lib]
name = "tftp_server"
path = "src/lib.rs"

[[bin]]
name = "tftp_server"
path = "src/bin.rs"

[[test]]
name = "tftp-server-tests"
path = "tests/test_server.rs"
harness = false
