[package]
name = "tftp_server"
version = "0.5.0"
authors = ["Darin Minamoto <darinm223@gmail.com>", "Alexandru Macovei <alexnmaco@gmail.com>"]
description = "A TFTP server implementation in Rust using mio"
repository = "https://github.com/alexmaco/tftp-server"
readme = "README.md"
keywords = ["network", "tftp", "protocol", "mio"]
license = "MIT/GPLv3"
edition = "2018"

[dependencies]
mio = "0.6.16"
byteorder = "1.2.7"
log = "0.4.6"
env_logger = "0.6.0"
clap = "2.32.0"
mio-more = "0.1.0"
sna = "0.1.0"

[dev-dependencies]
env_logger = "0.6.0"
assert_matches = "1.3.0"

[lib]
name = "tftp_server"
path = "src/lib.rs"

[[bin]]
name = "tftp_server"
path = "src/bin.rs"

[[test]]
name = "tftp-server-tests"
path = "tests/test_server.rs"
harness = false

[profile.release]
lto = true
